<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bunker"
    tools:context=".ui.detail.DetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDetailCharacterImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimens120dp"
        android:layout_marginTop="@dimen/dimens105dp"
        android:layout_marginBottom="@dimen/dimens450dp"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterName"
        style="@style/TextAppearance.Title.Title25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens10dp"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailCharacterImage"
        tools:text="@string/mrs_sanchez" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterSpecies"
        style="@style/TextAppearance.Body.Body15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens5dp"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCharacterName"
        tools:text="@string/human" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivDetailCharacterImageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimens50dp"
        android:layout_marginTop="@dimen/dimens40dp"
        android:layout_marginBottom="@dimen/dimens300dp"
        android:src="@color/arsenic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.SelectedCornerCut" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterGender"
        style="@style/TextAppearance.Body.Body15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens70dp"
        android:layout_marginTop="@dimen/dimens55dp"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCharacterSpecies"
        tools:text="@string/male" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterStatus"
        style="@style/TextAppearance.Title.Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens10dp"
        android:layout_marginTop="@dimen/dimens65dp"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintStart_toEndOf="@id/ivDetailCharacterStatus"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/alive" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDetailCharacterStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens90dp"
        android:layout_marginTop="@dimen/dimens75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_alive_status" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivDetailCharacterInfoBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens0dp"
        android:layout_marginHorizontal="@dimen/dimens50dp"
        android:layout_marginTop="@dimen/dimens40dp"
        android:layout_marginBottom="@dimen/dimens75dp"
        android:src="@color/arsenic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailCharacterImageBackground"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.SelectedCornerCut.Info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterOriginTitle"
        style="@style/TextAppearance.Title.Title18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens80dp"
        android:layout_marginTop="@dimen/dimens75dp"
        android:text="@string/origin"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCharacterGender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterOrigin"
        style="@style/TextAppearance.Body.Body15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens80dp"
        android:layout_marginTop="@dimen/dimens5dp"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCharacterOriginTitle"
        tools:text="@string/earth" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterLocationTitle"
        style="@style/TextAppearance.Title.Title18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens80dp"
        android:layout_marginTop="@dimen/dimens30dp"
        android:text="@string/location"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCharacterOrigin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterLocation"
        style="@style/TextAppearance.Body.Body15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens80dp"
        android:layout_marginTop="@dimen/dimens5dp"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCharacterLocationTitle"
        tools:text="@string/earth" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailCharacterEpisodesCount"
        style="@style/TextAppearance.Body.Body15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens60dp"
        android:layout_marginEnd="@dimen/dimens70dp"
        android:translationZ="@dimen/dimens1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCharacterGender"
        tools:text="@string/episodes" />

</androidx.constraintlayout.widget.ConstraintLayout>